# world-compute

./: .gitignore  .placeholder-allowlist  CLAUDE.md  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml
.github/workflows/: ci.yml  drift-check.yml  safety-hardening-ci.yml  verify-no-placeholders.yml
.omc/: project-memory.json
.omc/state/: agent-replay-9583c4e0-c876-4a2f-b83c-b7ae349aba41.jsonl  subagent-tracking.json
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
adapters/cloud/: Cargo.toml
adapters/cloud/src/: main.rs
adapters/kubernetes/: Cargo.toml
adapters/kubernetes/helm/: Chart.yaml  values.yaml
adapters/kubernetes/helm/templates/: crd.yaml  deployment.yaml
adapters/kubernetes/src/: main.rs
adapters/slurm/: Cargo.toml
adapters/slurm/src/: main.rs
docs/: releases.md
docs/funding/: README.md
docs/governance/: bylaws.md
docs/legal/: entity.md  quarterly-report-template.md
docs/operators/: running-a-relay.md
docs/security/: evidence-schema.md  incident-disclosure-policy.md
gui/src/: App.tsx  index.html  package.json
gui/src-tauri/: Cargo.toml
gui/src-tauri/src/: commands.rs  main.rs
notes/: session-2026-04-15.md  session-2026-04-16-implement.md  session-2026-04-16.md  session-2026-04-17-audit-and-issues.md  session-2026-04-17-full-implementation.md  session-2026-04-18-production-networking-and-honest-accounting.md
ops/release/: build-reproducible.sh  sign-release.sh  verify-release.sh
proto/: admin.proto  cluster.proto  donor.proto  governance.proto  mesh_llm.proto  submitter.proto
scripts/: churn-harness.sh  drift-check.sh  e2e-phase1.sh  quickstart-timed.sh  validate-evidence.sh  verify-no-placeholders.sh
specs/001-world-compute-core/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md  whitepaper.md
specs/002-safety-hardening/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-stub-replacement/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-full-implementation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-production-readiness/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: cli_dispatch.rs  error.rs  features.rs  lib.rs  main.rs  types.rs
src/acceptable_use/: filter.rs  mod.rs
src/agent/: build_info.rs  config.rs  daemon.rs  donor.rs  identity.rs  lifecycle.rs  mod.rs  node.rs
src/cli/: admin.rs  donor.rs  governance.rs  mod.rs  submitter.rs
src/credits/: caliber.rs  decay.rs  mod.rs  ncu.rs
src/data_plane/: cid_store.rs  confidential.rs  erasure.rs  mod.rs  placement.rs  staging.rs
src/governance/: admin_service.rs  board.rs  governance_service.rs  humanity_points.rs  mod.rs  proposal.rs  roles.rs  vote.rs  voting.rs
src/identity/: mod.rs  oauth2.rs  personhood.rs  phone.rs
src/incident/: audit.rs  containment.rs  mod.rs
src/ledger/: crdt.rs  entry.rs  mod.rs  threshold_sig.rs  transparency.rs
src/network/: dial_logging.rs  discovery.rs  dispatch.rs  doh_resolver.rs  gossip.rs  mod.rs  nat.rs  rate_limit.rs  relay_reservation.rs  rest_gateway.rs  tls.rs  transport.rs  wss_transport.rs
src/policy/: decision.rs  engine.rs  mod.rs  rules.rs
src/preemption/: mod.rs  supervisor.rs  triggers.rs
src/registry/: mod.rs  transparency.rs
src/sandbox/: apple_vf.rs  egress.rs  firecracker.rs  gpu.rs  hyperv.rs  mod.rs  wasm.rs
src/scheduler/: adapter.rs  broker.rs  coordinator.rs  job.rs  manifest.rs  mod.rs  priority.rs  submitter.rs
src/telemetry/: energy.rs  mod.rs  redaction.rs
src/verification/: attestation.rs  audit.rs  mod.rs  quorum.rs  receipt.rs  trust_score.rs
tests/: acceptable_use.rs  adversarial.rs  agent.rs  churn.rs  cli.rs  credits.rs  data_plane.rs  distributed_dispatch.rs  egress.rs  governance.rs  identity.rs  incident.rs  integration.rs  ledger.rs  mesh_llm.rs  nat_traversal.rs  network.rs  policy.rs  preemption.rs  red_team_exercise.rs  registry.rs  sandbox.rs  scheduler.rs  telemetry.rs  test_nat_and_discovery.rs  test_raft_coordinator.rs  test_rekor_transparency.rs  test_telemetry_init.rs  verification.rs
tests/acceptable_use/: mod.rs  test_filter.rs
tests/adversarial/: test_byzantine_donor.rs  test_flood_resilience.rs  test_network_isolation.rs  test_sandbox_escape.rs
tests/agent/: test_build_info.rs  test_enrollment.rs  test_lifecycle.rs
tests/churn/: simulator.rs
tests/cli/: test_commands.rs
tests/credits/: test_decay.rs  test_ncu.rs
tests/data_plane/: test_cid_store.rs  test_confidential.rs  test_storage_gc.rs
tests/egress/: test_default_deny.rs  test_lan_block.rs  test_private_ranges.rs  test_runtime_fetch.rs
tests/governance/: test_admin_auth.rs  test_quorum.rs  test_separation.rs  test_timelock.rs
tests/identity/: test_oauth2.rs  test_oauth2_flow.rs  test_personhood.rs  test_revocation.rs  test_uniqueness.rs
tests/incident/: test_audit.rs  test_auth.rs  test_cascade_timing.rs  test_enforcement.rs  test_freeze.rs  test_quarantine.rs
tests/integration/: test_lan_testnet.rs
tests/ledger/: test_crdt.rs  test_ledger_ops.rs  test_threshold_sig.rs
tests/mesh_llm/: test_inference.rs
tests/network/: test_discovery.rs  test_rate_limit.rs  test_rest.rs  test_tls.rs
tests/policy/: test_artifact_check.rs  test_cert_chain_validation.rs  test_dispatch_attestation.rs  test_ed25519_policy_verification.rs  test_egress_policy.rs  test_happy_path.rs  test_identity_check.rs  test_llm_advisory.rs  test_quarantine.rs  test_quota.rs
tests/preemption/: test_supervisor.rs  test_triggers.rs
tests/red_team/: scenario_1_malicious_workload.rs  scenario_2_compromised_account.rs  scenario_3_policy_bypass.rs  scenario_4_sandbox_escape.rs  scenario_5_supply_chain.rs
tests/registry/: test_artifacts.rs
tests/sandbox/: test_cleanup.rs  test_firecracker_rootfs.rs  test_firecracker_vm.rs  test_gpu.rs  test_isolation.rs  test_wasm_hello.rs
(+73 files in other folders)
