[workspace]
members = [
    ".",
    "gui/src-tauri",
    "adapters/slurm",
    "adapters/kubernetes",
    "adapters/cloud",
]
resolver = "2"

[package]
name = "worldcompute"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "A decentralized, volunteer-built compute public good"
repository = "https://github.com/ContextLab/world-compute"

[[bin]]
name = "worldcompute"
path = "src/main.rs"

[dependencies]
# P2P networking
libp2p = { version = "0.54", features = [
    "tokio",
    "quic",
    "tcp",
    "noise",
    "yamux",
    "mdns",
    "kad",
    "gossipsub",
    "dcutr",
    "relay",
    "dns",
    "identify",
    "ping",
    "autonat",
    "request-response",
    "cbor",
    "ed25519",
    "macros",
] }

# gRPC
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"

# CLI
clap = { version = "4", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
ciborium = "0.2"

# Crypto
ed25519-dalek = { version = "2", features = ["serde", "rand_core"] }
sha2 = "0.10"
rand = "0.8"
rand_04 = { package = "rand", version = "0.4" }
rsa = { version = "0.9", features = ["sha2"] }
p256 = { version = "0.13", features = ["ecdsa"] }
p384 = { version = "0.13", features = ["ecdsa"] }
aes-gcm = "0.10"
x25519-dalek = { version = "2", features = ["static_secrets"] }
threshold_crypto = "0.2"

# TLS / certificate management
rcgen = "0.13"
tokio-rustls = "0.26"
rustls = "0.23"

# Unix signals (preemption supervisor)
nix = { version = "0.29", features = ["signal", "process"] }

# Content addressing
cid = { version = "0.11", features = ["serde"] }
multihash = { version = "0.19", features = ["serde-codec"] }

# Erasure coding
reed-solomon-erasure = "6"

# Consensus
openraft = { version = "0.9", features = ["serde"] }

# Observability (OpenTelemetry)
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = "0.27"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.28"

# WASM runtime
wasmtime = "27"

# HTTP client (BrightID, OAuth2, Rekor, Apple DeviceCheck, Twilio)
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking"] }

# OAuth2 authorization code flow
oauth2 = "4"

# X.509 certificate chain parsing (attestation)
x509-parser = "0.16"

# Misc
regex-lite = "0.1"
thiserror = "2"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
hex = "0.4"
base64 = "0.22"

# ML inference (mesh LLM)
candle-core = "0.8"
candle-transformers = "0.8"
tokenizers = "0.20"

# System info (energy metering)
sysinfo = "0.32"

[dev-dependencies]
time = "0.3"

[build-dependencies]
tonic-build = "0.12"
