[workspace]
members = [
    ".",
    "gui/src-tauri",
    "adapters/slurm",
    "adapters/kubernetes",
    "adapters/cloud",
]
resolver = "2"

[package]
name = "worldcompute"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "A decentralized, volunteer-built compute public good"
repository = "https://github.com/ContextLab/world-compute"

[[bin]]
name = "worldcompute"
path = "src/main.rs"

[dependencies]
# P2P networking
libp2p = { version = "0.54", features = [
    "tokio",
    "quic",
    "tcp",
    "noise",
    "yamux",
    "mdns",
    "kad",
    "gossipsub",
    "dcutr",
    "relay",
    "dns",
    "identify",
    "ping",
    "autonat",
    "request-response",
    "cbor",
    "ed25519",
    "macros",
    # spec 005: WSS-over-TLS-443 fallback transport for cross-firewall mesh (FR-003)
    "websocket",
    "tls",
] }

# DNS-over-HTTPS resolver fallback (FR-005) - used when OS resolver fails on /dnsaddr/ lookups
hickory-resolver = { version = "0.24", features = ["dns-over-https-rustls", "tokio-runtime"] }

# gRPC
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"

# CLI
clap = { version = "4", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
ciborium = "0.2"

# Crypto
ed25519-dalek = { version = "2", features = ["serde", "rand_core"] }
sha2 = "0.10"
rand = "0.8"
rand_04 = { package = "rand", version = "0.4" }
rsa = { version = "0.9", features = ["sha2"] }
p256 = { version = "0.13", features = ["ecdsa"] }
p384 = { version = "0.13", features = ["ecdsa"] }
aes-gcm = "0.10"
x25519-dalek = { version = "2", features = ["static_secrets"] }
threshold_crypto = "0.2"

# TLS / certificate management
rcgen = "0.13"
tokio-rustls = "0.26"
rustls = "0.23"

# Unix signals (preemption supervisor)
nix = { version = "0.29", features = ["signal", "process"] }

# Content addressing
cid = { version = "0.11", features = ["serde"] }
multihash = { version = "0.19", features = ["serde-codec"] }

# Erasure coding
reed-solomon-erasure = "6"

# Consensus
openraft = { version = "0.9", features = ["serde"] }

# Observability (OpenTelemetry)
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = "0.27"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.28"

# WASM runtime
wasmtime = "27"

# HTTP client (BrightID, OAuth2, Rekor, Apple DeviceCheck, Twilio)
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking"] }

# OAuth2 authorization code flow
oauth2 = "4"

# X.509 certificate chain parsing (attestation)
x509-parser = "0.16"

# Misc
regex-lite = "0.1"
thiserror = "2"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
hex = "0.4"
base64 = "0.22"

# ML inference (mesh LLM)
candle-core = "0.8"
candle-transformers = "0.8"
tokenizers = "0.20"

# System info (energy metering + real current_load per FR-033)
sysinfo = "0.32"
# GPU metrics for current_load on NVIDIA hosts (FR-033)
nvml-wrapper = "0.10"

# spec 005: TPM2-backed confidential-compute key sealing (FR-034)
# Optional: only built when the tpm2 feature is enabled; not all hosts have a TPM.
tss-esapi = { version = "7", optional = true }

# spec 005: OCI image handling for real Firecracker rootfs (FR-012 - FR-014)
oci-spec = "0.7"
tar = "0.4"
flate2 = "1"

# spec 005: zstd compression for DistriFusion activation tensors (FR-026)
zstd = "0.13"

[features]
default = []
# Production build: compile-time enforces non-zero pinned fingerprints (FR-008, FR-010, FR-011a)
production = []
# Optional TPM2 seal/unseal via tss-esapi (FR-034); requires a working TPM device
tpm2 = ["dep:tss-esapi"]

[dev-dependencies]
time = "0.3"

[build-dependencies]
tonic-build = "0.12"
