[package]
name = "worldcompute-cloud-adapter"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
worldcompute = { path = "../.." }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
