[package]
name = "worldcompute-slurm-adapter"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
worldcompute = { path = "../.." }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
