[package]
name = "worldcompute-gui"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[features]
gui = ["tauri"]

[dependencies]
worldcompute = { path = "../.." }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "1", optional = true }
